# 3dsMax-Learning-Path

./: .gitignore  3dsMax-Learning-Path.code-workspace  README.md
ColorConverterTest/: CMakeLists.txt  ColorConverter.cpp  ColorConverter.def  ColorConverter.h  ColorConverter.rc  ColorConverter.vcxproj  ColorConverter.vcxproj.filters  DllEntry.cpp  QColorConverterWidget.cpp  QColorConverterWidget.h  QColorConverterWidget.ui  QtPluginRollup.cpp  QtPluginRollup.h  README.md  plugin_form.ui  resource.h
ColorConverterTest/GeneratedFiles/: qrc_ColorConverter_translations.cpp  ui_QColorConverterWidget.h  ui_plugin_form.h
ColorConverterTest/GeneratedFiles/Release/: moc_QColorConverterWidget.cpp  moc_QColorEyeDropper.cpp  moc_QColorRectWidget.cpp  moc_QColorSwatchWidget.cpp  moc_QtPluginRollup.cpp
ColorConverterTest/GeneratedFiles/tfiles/: ColorConverter.qrc  ColorConverter_de-DE.qm  ColorConverter_de-DE.ts  ColorConverter_fr-FR.qm  ColorConverter_fr-FR.ts  ColorConverter_ja-JP.qm  ColorConverter_ja-JP.ts  ColorConverter_ko-KR.qm  ColorConverter_ko-KR.ts  ColorConverter_pt-BR.qm  ColorConverter_pt-BR.ts  ColorConverter_zh-CN.qm  ColorConverter_zh-CN.ts
ColorConverterTest/utils/: ColorManagementAPIs.cpp  ColorManagementAPIs.h  QColorEyeDropper.cpp  QColorEyeDropper.h  QColorRectWidget.cpp  QColorRectWidget.h  QColorSwatchWidget.cpp  QColorSwatchWidget.h
Lesson1a/: CMakeLists.txt  DllEntry.cpp  Lesson1a.cpp  Lesson1a.sln  Lesson1a.vcxproj  Lesson1a.vcxproj.filters  PropertySheet.props  build.bat
Lesson1a/GeneratedFiles/: ui_plugin_form.h
Lesson1b/: Lesson1b.h  Lesson1b.vcxproj  Lesson1b_mytest.sln
Lesson2/: CMakeLists.txt  Lesson2.cpp  build.bat
Lesson3/: CMakeLists.txt  Lesson3.cpp
